@@ -15,6 +15,7 @@
   </gresource>
   <gresource prefix="@base-id-slashed@/icons/scalable/actions/">
     <file preprocess="xml-stripblanks">pencil-symbolic.svg</file>
+    <file preprocess="xml-stripblanks">lock-symbolic.svg</file>
     <file preprocess="xml-stripblanks">checkmark-symbolic.svg</file>
   </gresource>
 </gresources>
