@@ -1,6 +1,7 @@
 49.alpha - DEVEL
 ==========================
 
+- Add a lock button to the earmark picker
 - Start the focus at the center of the grid and show it from the get-go
 - Let the grid be unselected by pressing escape or clicking outside
 - Update ctrl+keys to cycle through cells linearly (#5)
